# arm_farm

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
arm_farm/: __init__.py  cameras.py  motors.py  robots.py
arm_farm/sim/: view.py
arm_farm/utils/: find_port.py
scripts/: calibrate.sh  libpython_patch.sh  record.sh  teleoperate.sh  train.sh  venv_patch.sh
scripts/sim/: _render_cameras.py  play.sh  play_native.sh  preview.sh  replay.sh  train.sh
src/arm_farm/: hardware.py
src/arm_farm/sim/: __init__.py  _env.py  convert_pt_to_onnx.py  play_native.py  preview.py  runner.py
src/arm_farm/sim/assets/so101/: __init__.py  so101_constants.py
src/arm_farm/sim/assets/so101/xmls/: so101.xml  so101_scene.xml
src/arm_farm/sim/lerobot_robot/: __init__.py  config_mujoco_so101.py  mujoco_so101.py
src/arm_farm/sim/tasks/: README.md  __init__.py  lift_cube_env_cfg.py  rewards.py
src/arm_farm/sim/tasks/cube/: __init__.py  env_cfg.py  rl_cfg.py
src/arm_farm/sim/tasks/cube_depth/: __init__.py  env_cfg.py  rl_cfg.py
src/arm_farm/sim/tasks/cube_rgb/: __init__.py  env_cfg.py  rl_cfg.py
src/arm_farm/sim/tasks/mdp/: __init__.py
src/arm_farm/sim/tasks/play/: __init__.py  env_cfg.py  rl_cfg.py
src/arm_farm/sim/tests/: test_compile.py  test_play_native.py  test_preview.py  test_register.py  test_robot_replay.py  test_step.py
