[project]
name = "arm-farm"
version = "0.2.0"
description = "SO-ARM101 data collection and behavior cloning policies built on lerobot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot[feetech,core_scripts]",
]

[project.optional-dependencies]
# Per-policy extras; pull one when training. Base sync stays slim.
training = ["lerobot[training]"]              # accelerate + wandb + dataset
act = ["lerobot[training]"]
diffusion = ["lerobot[training,diffusion]"]
smolvla = ["lerobot[training,smolvla]"]
pi = ["lerobot[training,pi]"]
kinematics = ["lerobot[kinematics]"]          # placo IK
intelrealsense = ["lerobot[intelrealsense]"]
all = ["lerobot[all]"]
# cu128 torch + nvidia warp on Linux; PyPI CPU torch + warp on macOS (play/replay only).
sim = ["mjlab[cu128]", "torch>=2.7.0", "onnxruntime>=1.19.0"]

# Registers Cube / Cube-Rgb / Cube-Depth / Play tasks + mujoco_so101 Robot.
[project.entry-points."mjlab.tasks"]
arm_farm = "arm_farm.sim"

[project.scripts]
preview = "arm_farm.sim.preview:cli"
convert2onnx = "arm_farm.sim.convert_pt_to_onnx:cli"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.30",
    "pytest>=8.0",
]

# ---------------- uv-specific configuration ----------------

# lerobot + mjlab from main. Indices for transitive deps (torch, warp-lang,
# mujoco, mjviser) must be replicated below — uv doesn't inherit
# `[tool.uv.sources]` from non-workspace deps.
[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", branch = "main" }
# Tracking mjlab main for the post-v1.3.0 mujoco 3.8 bump (v1.3.0 pinned
# mujoco-warp pre-3.8.0, breaking imports against py.mujoco.org nightlies).
mjlab = { git = "https://github.com/mujocolab/mjlab", branch = "main" }
mujoco = { index = "mujoco" }
mjviser = { git = "https://github.com/mujocolab/mjviser", rev = "1bdfd6fe79066b847a5f430000fcfbb53ec31a6f" }
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
torch = [
  { index = "pytorch-cu128", extra = "sim", marker = "sys_platform != 'darwin'" },
]

[tool.uv]
override-dependencies = ["mujoco>=3.8.0.dev0"]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

# Builds arm_farm as editable so `import arm_farm` works in the venv.
[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

# ---------------- Tooling ----------------

[tool.ruff]
target-version = "py312"
line-length = 110
extend-exclude = ["outputs", "data", "wandb"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "C4",       # comprehensions
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = ["E501"]  # long lines are OK, formatter handles wrapping

[tool.ruff.lint.isort]
known-first-party = ["arm_farm"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "scripts"]

# Suppress mujoco C-ext + sweep-harness duck-typing noise that ty can't see.
[[tool.ty.overrides]]
include = [
    "src/arm_farm/sim/assets/so101/so101_constants.py",
    "src/arm_farm/sim/preview.py",
    "src/arm_farm/sim/tests/test_preview.py",
    "scripts/sim/_compare_pipelines.py",
    "scripts/sim/_env_sweep.py",
    "scripts/sim/_render_cameras.py",
]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
